--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "learn-backend",
   "version": "1.0.0",
   "description": "a backend at tea and code channel - youtube",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +14,8 @@
     "chai"
   ],
   "author": "Ankush",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
